--- a/main.tex
+++ b/main.tex
@@ -356,7 +356,7 @@ We now need to investigate two things:
 \end{enumerate}
 
 % ---
-\subsection{NP-hardness}
+\subsubsection{NP-hardness}
 % ---
 \subsubsection*{Setting}
 Given a finite set $D$ of disks $d_i$ in the plane with centers $c_i$ and positive radii $r_i$ together with a finite set $P_i = \{ \alpha_1, \dots, \alpha_{m_i}\}$ of points on the boundary of $d_i$ subdividing the disk into pie-pieces, we wish to determine a physically realizable drawing of $D$ together with a rotation $\varphi_i$ for each disk, s.t. the minimum distance of any point in $p\in\bigcup P_i$ to the next occluded point on the boundary of $d_i$ is maximized.
@@ -385,7 +385,7 @@ Given a planar instance $\mathcal{I}$ of 3-SAT we need to construct an instance 
 
 All the disks presented have the same radius and we say that two disks overlap by $f$ if the overlapped fraction of the boundary has length $f$. We introduce the construction of $\mathcal{D}$.
 
-\subsubsection{Construction}
+\subsubsection*{Construction}
 \begin{figure}[h]
 \centering
 \includegraphics[width=5cm, height=5cm]{assets/np-hardness/neutral.png}
@@ -484,7 +484,7 @@ This implies that all disks can create a distances of 15 degrees to their occlud
 Conversely, if the constructed instance has a physical realization with degrees $\geq 15$, then clearly in each clause-disk we must have a least one of the connector going below it. This is only possible with distance $\geq 15$ if the separators are directed away from the clause disk and thus forcing the rest of the connection to go "upwards" (as viewed from clause to gadget). This means that the first disk in the gadget must be under the last disk in the connecting line. This is only possible if the literal is "true" meaning the variable is "false" and the literal negated or "true" and the literal in normal form. We obtain and orientation of the gadgets that is consistent with all clauses and thus a satisfying assignment of the variables in $\mathcal{I}$.\qedsymbol
 
 % ---
-\subsection{Optimal rotations for $\Gamma_{pie}$}
+\subsubsection{Optimal rotations for $\Gamma_{pie}$}
 % ---
 
 Given a set $S$ of covering glyphs and a fixed pie chart $C_i$ we can calculate the occluded radial intervals $I_1,...,I_k$ on the boundary circle of $C_i$. We now want to find a rotation of the dividing lines that maximizes the minimal distance of any of the $\alpha^i_j$ to the occluded intervals. We can look at this rotation with respect to some reference line. Here we use $\alpha_1$ as the reference line.\\
@@ -533,6 +533,7 @@ If we use a naive implementation for Theorem 5 we get a runtime of $O(n^3k^2)$. 
 
 
 It may happen again that for all glyphs the local utility is zero. Again we have to use a heuristic to get better results. For instance, we can just ignore one dividing line for each glyphs and try again. This can be done iteratively until the utility is not zero for all glyphs. For the case of exactly one dividing line the utility must be bigger than zero and therefore the heuristic guarantees a better decision than just randomly tie breaking.
+
 
 \newpage
 
