One more disk->discs in outcommented code

--- a/main.tex
+++ b/main.tex
@@ -583,7 +583,7 @@ We can get a good solution with the help of pie charts. For every square we cons
 \end{figure}
 
 %\begin{figure}[htp]
-%  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{assets/nested_disks_all.png}
+%  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{assets/nested_discs_all.png}
 %\end{figure}
 
 \newpage
